--- a/assets/style.css
+++ b/assets/style.css
@@ -136,7 +136,7 @@
     padding: 8px 35px 8px 14px;
     }
 
-#login_form .button-container {
+.login_form .button-container {
     margin-top: 15px;
     }
 
@@ -150,10 +150,6 @@
 
 .hentry .fb-login-container {
     margin: 0 0 20px;
-    }
-
-.hentry .button-container .cancel {
-    display: none;
     }
 
 .hentry .wide .button-container input[type="submit"] {
