--- a/assets/style.css
+++ b/assets/style.css
@@ -54,7 +54,6 @@
     }
 
 .ajax-login-default-form-container input[type="submit"]:hover {
-    background-image: red;
     color: #008000;
     }
 
@@ -62,6 +61,10 @@
     -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1) inset;
     -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1) inset;
     border: 1px solid #CFCFCF;
+    }
+
+.ajax-login-default-form-container input[type="submit"]:disabled:hover {
+    cursor: default;
     }
 
 .ajax-login-default-form-container input[type="submit"]:disabled {
