Body is now set to 100% to ensure the overlay is 100%.

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
+body {
+    height: 100%;
+}
+
 /*= Default Forms
 -------------------------------------------------------------- */
 .ajax-login-default-form-container label {
