--- a/assets/jquery-ui.css
+++ b/assets/jquery-ui.css
@@ -67,6 +67,7 @@
     background: -moz-radial-gradient(rgba(127, 127, 127, 0.5), rgba(127, 127, 127, 0.5) 35%, rgba(0, 0, 0, 0.7)) !important;
     background: -webkit-radial-gradient(rgba(127, 127, 127, 0.5), rgba(127, 127, 127, 0.5) 35%, rgba(0, 0, 0, 0.7)) !important;
     z-index: 4;
+    position: fixed;
     }
 
 .ui-dialog-buttonpane .ui-dialog-content {
