--- a/assets/admin.css
+++ b/assets/admin.css
@@ -1,9 +1,9 @@
-.main {
+#ajax-login-register-settings-wrapper .main {
     float: left;
     width: 70%;
     }
 
-.sidebar {
+#ajax-login-register-settings-wrapper .sidebar {
     float: right;
     width: 30%;
     }
