--- a/assets/style.css
+++ b/assets/style.css
@@ -291,3 +291,30 @@ body {
     float: left;
     margin: 5px 10px 0 0;
     }
+
+.alr_form_field {
+    -webkit-transition-property: border-color;
+    -moz-transition-property: border-color;
+    -o-transition-property: border-color;
+    -ms-transition-property: border-color;
+    transition-property: border-color;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    -ms-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: linear;
+    -moz-transition-timing-function: linear;
+    -o-transition-timing-function: linear;
+    -ms-transition-timing-function: linear;
+    transition-timing-function: linear;
+    width: 95%;
+    margin: 0 0 15px 0;
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 0px;
+    font-size: 12px;
+    letter-spacing: 0.1em;
+    padding: 5px;
+    margin: 0;
+    }
