--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,9 @@
 
 .zm_alr_ul_container {
     clear: both;
-    margin: 0;
+    float: left;
+    width: 100%;
+    margin: 15px 0 0;
     padding: 0;
     list-style-type: none;
     }
